Fix image section condensing and wrapping

--- a/styles/default.css
+++ b/styles/default.css
@@ -131,7 +131,7 @@ footer {
 
 .img-gallery {
     justify-content: center;
-    padding: 1.5rem 0;
+    flex-wrap: wrap;
     gap: 3rem;
 }
 
